Completes Broker Implementation

--- a/SDChat/BrokerImpl/BrokerImpl.csproj
+++ b/SDChat/BrokerImpl/BrokerImpl.csproj
@@ -48,9 +48,17 @@
       <Project>{db9450ec-ae45-4c75-ab6b-8589d51f605f}</Project>
       <Name>GroupImpl</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+    <ProjectReference Include="..\ICentralManager\CentralManagerInterface.csproj">
+      <Project>{24F88940-A2AB-4519-A124-6BE407685336}</Project>
+      <Name>CentralManagerInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Interfaces\BrokerInterface.csproj">
       <Project>{7d7169a1-739b-49a9-8312-450bb13bdb44}</Project>
-      <Name>Interfaces</Name>
+      <Name>BrokerInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UserInterface\UserInterface.csproj">
+      <Project>{478227E8-EE87-4BFB-9B94-05A55AB45D5A}</Project>
+      <Name>UserInterface</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
