--- a/SDChat/ICentralManager/CentralManagerInterface.csproj
+++ b/SDChat/ICentralManager/CentralManagerInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D7169A1-739B-49A9-8312-450BB13BDB44}</ProjectGuid>
+    <ProjectGuid>{24F88940-A2AB-4519-A124-6BE407685336}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Interfaces</RootNamespace>
-    <AssemblyName>Interfaces</AssemblyName>
+    <RootNamespace>ICentralManager</RootNamespace>
+    <AssemblyName>ICentralManager</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,10 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IBroker.cs" />
     <Compile Include="ICentralManager.cs" />
-    <Compile Include="IUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfaces\BrokerInterface.csproj">
+      <Project>{7D7169A1-739B-49A9-8312-450BB13BDB44}</Project>
+      <Name>BrokerInterface</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
