--- a/SDChat/UserInterface/UserInterface.csproj
+++ b/SDChat/UserInterface/UserInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8161DC50-875F-4936-8B12-FDD089C43220}</ProjectGuid>
+    <ProjectGuid>{478227E8-EE87-4BFB-9B94-05A55AB45D5A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CentralManagerImpl</RootNamespace>
-    <AssemblyName>CentralManagerImpl</AssemblyName>
+    <RootNamespace>UserInterface</RootNamespace>
+    <AssemblyName>UserInterface</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,18 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CentralManager.cs" />
+    <Compile Include="IUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ICentralManager\CentralManagerInterface.csproj">
-      <Project>{24F88940-A2AB-4519-A124-6BE407685336}</Project>
-      <Name>CentralManagerInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Interfaces\BrokerInterface.csproj">
-      <Project>{7d7169a1-739b-49a9-8312-450bb13bdb44}</Project>
-      <Name>BrokerInterface</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
