changes Form implementation and adds User implementation library

--- a/SDChat/BrokerServer/App.config
+++ b/SDChat/BrokerServer/App.config
@@ -7,7 +7,14 @@
     <application>
       <lifetime leaseTime="0"/>
       <channels>
-        <channel ref="http" port="1235"/>
+        <channel ref="http" port="1235">
+          <clientProviders>
+            <formatter ref="soap" />
+          </clientProviders>
+          <serverProviders>
+            <formatter ref="soap" typeFilterLevel="Full" />
+          </serverProviders>
+        </channel>
       </channels>
       <service>
         <wellknown type="BrokerImpl.Broker, BrokerImpl" mode="Singleton" objectUri="RemoteBroker.soap" />
