--- a/SDChat/CentralManagerServer/App.config
+++ b/SDChat/CentralManagerServer/App.config
@@ -7,7 +7,14 @@
     <application>
       <lifetime leaseTime="0"/>
       <channels>
-        <channel ref="http" port="1234" />
+        <channel ref="http" port="1234">
+          <clientProviders>
+            <formatter ref="soap" />
+          </clientProviders>
+          <serverProviders>
+            <formatter ref="soap" typeFilterLevel="Full" />
+          </serverProviders>
+        </channel>
       </channels>
       <service>
         <wellknown type="CentralManagerImpl.CentralManager, CentralManagerImpl" mode="Singleton" objectUri="RemoteCentralManager.soap" />
