--- a/SDChat/UserFormImpl/App.config
+++ b/SDChat/UserFormImpl/App.config
@@ -6,9 +6,23 @@
     <system.runtime.remoting>
       <application>
         <channels>
-          <channel ref="http" port="0" />
-          <channel ref="tcp" port="0" />
-          <channel ref="ipc" portName="ClientChannel" />
+          <channel ref="http" port="0">
+            <clientProviders>
+              <formatter ref="soap" />
+            </clientProviders>
+            <serverProviders>
+              <formatter ref="soap" typeFilterLevel="Full" />
+            </serverProviders>
+          </channel>
+          <channel ref="tcp" port="0">
+            <clientProviders>
+              <formatter ref="soap" />
+            </clientProviders>
+            <serverProviders>
+              <formatter ref="soap" typeFilterLevel="Full" />
+            </serverProviders>
+          </channel>
+          <!--<channel ref="ipc" portName="ClientChannel" />-->
         </channels>
         <client>
           <wellknown displayName="Broker 1"
