--- a/SDChat/UserFormImpl/UserFormImpl.csproj
+++ b/SDChat/UserFormImpl/UserFormImpl.csproj
@@ -85,6 +85,10 @@
       <Project>{7D7169A1-739B-49A9-8312-450BB13BDB44}</Project>
       <Name>BrokerInterface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UserImpl\UserImpl.csproj">
+      <Project>{18EE5611-523E-42FF-84BA-E421F91CE75A}</Project>
+      <Name>UserImpl</Name>
+    </ProjectReference>
     <ProjectReference Include="..\UserInterface\UserInterface.csproj">
       <Project>{478227E8-EE87-4BFB-9B94-05A55AB45D5A}</Project>
       <Name>UserInterface</Name>
