--- a/SDChat/UserFormImpl/App.config
+++ b/SDChat/UserFormImpl/App.config
@@ -24,11 +24,12 @@
           </channel>
           <!--<channel ref="ipc" portName="ClientChannel" />-->
         </channels>
-        <client>
-          <wellknown displayName="Broker 1"
-                     type="BrokerInterface.IBroker, BrokerInterface"
-                     url="http://localhost:1235/RemoteBroker.soap" />
-        </client>
       </application>
     </system.runtime.remoting>
+  <appSettings>
+    <add key="type" value="BrokerInterface.IBroker"/>
+    <add key="assembly" value="BrokerInterface"/>
+    <add key="RegionA" value="http://localhost:1235/RemoteBroker.soap"/>
+    <add key="RegionB" value="http://localhost:1236/RemoteBroker.soap"/>
+  </appSettings>
 </configuration>
