--- a/SDChat/ICentralManager/CentralManagerInterface.csproj
+++ b/SDChat/ICentralManager/CentralManagerInterface.csproj
@@ -48,6 +48,10 @@
       <Project>{7D7169A1-739B-49A9-8312-450BB13BDB44}</Project>
       <Name>BrokerInterface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UserInterface\UserInterface.csproj">
+      <Project>{478227E8-EE87-4BFB-9B94-05A55AB45D5A}</Project>
+      <Name>UserInterface</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
