--- a/SDChat/CentralManagerServer/App.config
+++ b/SDChat/CentralManagerServer/App.config
@@ -21,4 +21,10 @@
       </service>
     </application>
   </system.runtime.remoting>
+  <appSettings>
+    <add key="type" value="BrokerInterface.IBroker"/>
+    <add key="assembly" value="BrokerInterface"/>
+    <add key="RegionA" value="http://localhost:1235/RemoteBroker.soap"/>
+    <add key="RegionB" value="http://localhost:1236/RemoteBroker.soap"/>
+  </appSettings>
 </configuration>
