--- a/SDChat/ICentralManager/CentralManagerInterface.csproj
+++ b/SDChat/ICentralManager/CentralManagerInterface.csproj
@@ -48,9 +48,13 @@
       <Project>{7D7169A1-739B-49A9-8312-450BB13BDB44}</Project>
       <Name>BrokerInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UserInterface\UserInterface.csproj">
-      <Project>{478227E8-EE87-4BFB-9B94-05A55AB45D5A}</Project>
-      <Name>UserInterface</Name>
+    <ProjectReference Include="..\GroupImpl\GroupImpl.csproj">
+      <Project>{DB9450EC-AE45-4C75-AB6B-8589D51F605F}</Project>
+      <Name>GroupImpl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Message\MessageImpl.csproj">
+      <Project>{56006E2B-C4B5-45E5-9E59-472C48AA0A03}</Project>
+      <Name>MessageImpl</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
