--- a/SDChat/BrokerClientInterface/BrokerClientInterface.csproj
+++ b/SDChat/BrokerClientInterface/BrokerClientInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8161DC50-875F-4936-8B12-FDD089C43220}</ProjectGuid>
+    <ProjectGuid>{5E49EEB2-E58C-4730-9A9A-00A9F3203958}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CentralManagerImpl</RootNamespace>
-    <AssemblyName>CentralManagerImpl</AssemblyName>
+    <RootNamespace>BrokerClientInterface</RootNamespace>
+    <AssemblyName>BrokerClientInterface</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,21 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CentralManager.cs" />
+    <Compile Include="IBrokerClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BrokerClientInterface\BrokerClientInterface.csproj">
-      <Project>{5E49EEB2-E58C-4730-9A9A-00A9F3203958}</Project>
-      <Name>BrokerClientInterface</Name>
-    </ProjectReference>
     <ProjectReference Include="..\GroupImpl\GroupImpl.csproj">
       <Project>{DB9450EC-AE45-4C75-AB6B-8589D51F605F}</Project>
       <Name>GroupImpl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ICentralManager\CentralManagerInterface.csproj">
-      <Project>{24F88940-A2AB-4519-A124-6BE407685336}</Project>
-      <Name>CentralManagerInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\Message\MessageImpl.csproj">
       <Project>{56006E2B-C4B5-45E5-9E59-472C48AA0A03}</Project>
