--- a/SDChat/CentralManagerServer/App.config
+++ b/SDChat/CentralManagerServer/App.config
@@ -22,8 +22,8 @@
     </application>
   </system.runtime.remoting>
   <appSettings>
-    <add key="type" value="BrokerInterface.IBroker"/>
-    <add key="assembly" value="BrokerInterface"/>
+    <add key="type" value="BrokerClientInterface.IBrokerClient"/>
+    <add key="assembly" value="BrokerClientInterface"/>
     <add key="RegionA" value="http://localhost:1235/RemoteBroker.soap"/>
     <add key="RegionB" value="http://localhost:1236/RemoteBroker.soap"/>
   </appSettings>
