--- a/SDChat/IBrokerService/IBrokerService.csproj
+++ b/SDChat/IBrokerService/IBrokerService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8161DC50-875F-4936-8B12-FDD089C43220}</ProjectGuid>
+    <ProjectGuid>{19727598-3EEC-4844-A8AF-6F7A98EED002}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CentralManagerImpl</RootNamespace>
-    <AssemblyName>CentralManagerImpl</AssemblyName>
+    <RootNamespace>IBrokerService</RootNamespace>
+    <AssemblyName>IBrokerService</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,26 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CentralManager.cs" />
+    <Compile Include="IBrokerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BrokerClientInterface\BrokerClientInterface.csproj">
-      <Project>{5E49EEB2-E58C-4730-9A9A-00A9F3203958}</Project>
-      <Name>BrokerClientInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GroupImpl\GroupImpl.csproj">
-      <Project>{DB9450EC-AE45-4C75-AB6B-8589D51F605F}</Project>
-      <Name>GroupImpl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ICentralManager\CentralManagerInterface.csproj">
-      <Project>{24F88940-A2AB-4519-A124-6BE407685336}</Project>
-      <Name>CentralManagerInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Message\MessageImpl.csproj">
-      <Project>{56006E2B-C4B5-45E5-9E59-472C48AA0A03}</Project>
-      <Name>MessageImpl</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
