--- a/SDChat/UserFormImpl/App.config
+++ b/SDChat/UserFormImpl/App.config
@@ -27,8 +27,8 @@
       </application>
     </system.runtime.remoting>
   <appSettings>
-    <add key="type" value="BrokerInterface.IBroker"/>
-    <add key="assembly" value="BrokerInterface"/>
+    <add key="type" value="BrokerServiceInterface.IBrokerService"/>
+    <add key="assembly" value="BrokerServiceInterface"/>
     <add key="RegionA" value="http://localhost:1235/RemoteBroker.soap"/>
     <add key="RegionB" value="http://localhost:1236/RemoteBroker.soap"/>
   </appSettings>
