adds working with errors

--- a/3º Trabalho/WCF/HostBroker/app.config
+++ b/3º Trabalho/WCF/HostBroker/app.config
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+    </startup>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IKV" />
+                <binding name="BasicHttpBinding_IKVService" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/Storages/KV/"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IKV"
-                contract="KVService.IKV" name="BasicHttpBinding_IKV" />
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/"
+                binding="wsDualHttpBinding" bindingConfiguration="" contract="KVService.IKVService"
+                name="BasicHttpBinding_IKVService" />
         </client>
         <behaviors>
             <serviceBehaviors>
@@ -20,8 +23,9 @@
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="Brokers.BrokerService">
-                <endpoint address="" binding="basicHttpBinding" contract="Brokers.IBrokerService">
+            <service name="HostBroker.BrokerService">
+                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
+                    contract="HostBroker.IBrokerService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
@@ -29,7 +33,7 @@
                 <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/Brokers/BrokerService/" />
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/" />
                     </baseAddresses>
                 </host>
             </service>
