--- a/3º Trabalho/WCF/HostKVStorage/app.config
+++ b/3º Trabalho/WCF/HostKVStorage/app.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+    </startup>
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
@@ -10,8 +13,9 @@
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="Storages.KV">
-                <endpoint address="" binding="basicHttpBinding" contract="Storages.IKV">
+            <service name="HostKVStorage.KVService">
+                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
+                    contract="HostKVStorage.IKVService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
@@ -19,7 +23,7 @@
                 <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/Storages/KV/" />
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/" />
                     </baseAddresses>
                 </host>
             </service>
