--- a/3º Trabalho/WCF/UserApp/App.config
+++ b/3º Trabalho/WCF/UserApp/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IBrokerService" />
+            </wsDualHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IBrokerService"
+                contract="BrokerService.IBrokerService" name="WSDualHttpBinding_IBrokerService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
