--- a/3º Trabalho/WCF/HostBroker/app.config
+++ b/3º Trabalho/WCF/HostBroker/app.config
@@ -5,14 +5,36 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IKVService" />
-            </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IKVService">
+                    <security mode="Message">
+                        <message clientCredentialType="Windows" />
+                    </security>
+                </binding>
+            </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/"
-                binding="wsDualHttpBinding" bindingConfiguration="" contract="KVService.IKVService"
-                name="BasicHttpBinding_IKVService" />
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv1"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IKVService"
+                contract="KVService.IKVService" name="kv1_client">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv2"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IKVService"
+                contract="KVService.IKVService" name="kv2_client">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv3"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IKVService"
+                contract="KVService.IKVService" name="kv3_client">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
         </client>
         <behaviors>
             <serviceBehaviors>
@@ -24,13 +46,31 @@
         </behaviors>
         <services>
             <service name="HostBroker.BrokerService">
-                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
+                <clear />
+                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/broker1"
+                    binding="wsDualHttpBinding" name="broker1_service" contract="HostBroker.IBrokerService"
+                    listenUriMode="Explicit">
+                    <identity>
+                        <dns value="localhost" />
+                        <certificateReference storeName="My" storeLocation="LocalMachine"
+                            x509FindType="FindBySubjectName" />
+                    </identity>
+                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" name="metadata"
+                    contract="IMetadataExchange" listenUriMode="Explicit">
+                    <identity>
+                        <dns value="localhost" />
+                        <certificateReference storeName="My" storeLocation="LocalMachine"
+                            x509FindType="FindBySubjectDistinguishedName" />
+                    </identity>
+                </endpoint>
+                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/broker2"
+                    binding="wsDualHttpBinding" bindingConfiguration="" name="broker2_service"
                     contract="HostBroker.IBrokerService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
                 </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
                         <add baseAddress="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/" />
