--- a/3º Trabalho/WCF/UserApp/App.config
+++ b/3º Trabalho/WCF/UserApp/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -10,9 +10,16 @@
             </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/"
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/broker1"
                 binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IBrokerService"
-                contract="BrokerService.IBrokerService" name="WSDualHttpBinding_IBrokerService">
+                contract="BrokerService.IBrokerService" name="broker1_client">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/broker2"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IBrokerService"
+                contract="BrokerService.IBrokerService" name="broker2_client">
                 <identity>
                     <dns value="localhost" />
                 </identity>
