--- a/3º Trabalho/WCF/HostKVStorage/app.config
+++ b/3º Trabalho/WCF/HostKVStorage/app.config
@@ -14,13 +14,33 @@
         </behaviors>
         <services>
             <service name="HostKVStorage.KVService">
-                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
+                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv1"
+                    binding="wsDualHttpBinding" bindingConfiguration="" name="kv1_service"
                     contract="HostKVStorage.IKVService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
                 </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <endpoint address="mex" binding="mexHttpBinding" name="metadata"
+                    contract="IMetadataExchange">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv2"
+                    binding="wsDualHttpBinding" bindingConfiguration="" name="kv2_service"
+                    contract="HostKVStorage.IKVService">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv3"
+                    binding="wsDualHttpBinding" bindingConfiguration="" name="kv3_service"
+                    contract="HostKVStorage.IKVService">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
                 <host>
                     <baseAddresses>
                         <add baseAddress="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/" />
