adds new solution

--- a/3º Trabalho/SD_WCF/KVStorage/app.config
+++ b/3º Trabalho/SD_WCF/KVStorage/app.config
@@ -13,22 +13,18 @@
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="HostKVStorage.KVService">
+            <service name="KVStorage.KVService">
                 <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
-                    name="service" contract="HostKVStorage.IKVService">
+                    name="service" contract="KVStorage.IKVService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
                 </endpoint>
                 <endpoint address="mex" binding="mexHttpBinding" name="metadata"
-                    contract="IMetadataExchange">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
+                    contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8735/Design_Time_Addresses/HostKVStorage/KVService/" />
+                        <add baseAddress="http://localhost:8735/Design_Time_Addresses/KVStorage/KVService/" />
                     </baseAddresses>
                 </host>
             </service>
