--- a/3º Trabalho/WCF/HostBroker/app.config
+++ b/3º Trabalho/WCF/HostBroker/app.config
@@ -14,21 +14,14 @@
             </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv1"
-                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IKVService"
-                contract="KVService.IKVService" name="kv1_client">
-                <identity>
-                    <dns value="localhost" />
-                </identity>
-            </endpoint>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv2"
+            <endpoint address="http://localhost:8734/Design_Time_Addresses/HostKVStorage/KVService/"
                 binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IKVService"
                 contract="KVService.IKVService" name="kv2_client">
                 <identity>
                     <dns value="localhost" />
                 </identity>
             </endpoint>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/HostKVStorage/KVService/kv3"
+            <endpoint address="http://localhost:8735/Design_Time_Addresses/HostKVStorage/KVService/"
                 binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IKVService"
                 contract="KVService.IKVService" name="kv3_client">
                 <identity>
@@ -47,9 +40,8 @@
         <services>
             <service name="HostBroker.BrokerService">
                 <clear />
-                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/broker1"
-                    binding="wsDualHttpBinding" name="broker1_service" contract="HostBroker.IBrokerService"
-                    listenUriMode="Explicit">
+                <endpoint address="" binding="wsDualHttpBinding" name="service"
+                    contract="HostBroker.IBrokerService" listenUriMode="Explicit">
                     <identity>
                         <dns value="localhost" />
                         <certificateReference storeName="My" storeLocation="LocalMachine"
@@ -64,16 +56,9 @@
                             x509FindType="FindBySubjectDistinguishedName" />
                     </identity>
                 </endpoint>
-                <endpoint address="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/broker2"
-                    binding="wsDualHttpBinding" bindingConfiguration="" name="broker2_service"
-                    contract="HostBroker.IBrokerService">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/HostBroker/BrokerService/" />
+                        <add baseAddress="http://localhost:8734/Design_Time_Addresses/HostBroker/BrokerService/" />
                     </baseAddresses>
                 </host>
             </service>
