--- a/3º Trabalho/WCF/KVStorage/app.config
+++ b/3º Trabalho/WCF/KVStorage/app.config
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
@@ -13,22 +10,16 @@
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="HostKVStorage.KVService">
-                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
-                    name="service" contract="HostKVStorage.IKVService">
+            <service name="KVStorage.KV">
+                <endpoint address="" binding="basicHttpBinding" contract="KVStorage.IKV">
                     <identity>
                         <dns value="localhost" />
                     </identity>
                 </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" name="metadata"
-                    contract="IMetadataExchange">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8735/Design_Time_Addresses/HostKVStorage/KVService/" />
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/KVStorage/KV/" />
                     </baseAddresses>
                 </host>
             </service>
