--- a/3º Trabalho/SD_WCF/Broker/Broker.csproj
+++ b/3º Trabalho/SD_WCF/Broker/Broker.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{80942E36-5259-46B7-9F39-1485AF01F488}</ProjectGuid>
+    <ProjectGuid>{ECD3B620-FE06-47E6-8BA7-D1128B697EA1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HostBroker</RootNamespace>
-    <AssemblyName>HostBroker</AssemblyName>
+    <RootNamespace>Broker</RootNamespace>
+    <AssemblyName>Broker</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,6 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrokerService.cs" />
+    <Compile Include="Connected Services\KVService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="IBrokerService.cs" />
     <Compile Include="Key.cs" />
     <Compile Include="Program.cs" />
@@ -54,10 +59,37 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Connected Services\KVService\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\KVService\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\KVService\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\KVService\KVService.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\KVService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\KVService\item.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\KVService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\KVService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\KVService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ProjectExtensions />
 </Project>
