--- a/3º Trabalho/WCF/HostKVStorage/oldHostKVStorage.csproj
+++ b/3º Trabalho/WCF/HostKVStorage/oldHostKVStorage.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{80942E36-5259-46B7-9F39-1485AF01F488}</ProjectGuid>
+    <ProjectGuid>{E9772B4D-095E-4470-A7F3-8A82F17CB3BD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HostBroker</RootNamespace>
-    <AssemblyName>HostBroker</AssemblyName>
+    <RootNamespace>HostKVStorage</RootNamespace>
+    <AssemblyName>HostKVStorage</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,18 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BrokerService.cs" />
-    <Compile Include="IBrokerService.cs" />
-    <Compile Include="Key.cs" />
+    <Compile Include="IKVService.cs" />
+    <Compile Include="KVService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ProjectExtensions />
+  <ProjectExtensions>
+    <VisualStudio>
+      <FlavorProperties GUID="{3D9AD99F-2412-4246-B90B-4EAA41C64699}">
+        <WcfProjectProperties>
+          <AutoStart>True</AutoStart>
+        </WcfProjectProperties>
+      </FlavorProperties>
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
